# hana-pixiv-downloader

./: .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/release-notes/: v0.1.0.md  v0.1.4.md  v0.1.5.md  v0.1.6.md
.github/workflows/: release.yml  verify.yml
install/: hpd.ps1  hpd.sh
omx_wiki/: hana-pixiv-downloader-标准发布流程.md  hana-pixiv-downloader-重命名收口实现记录-2026-06-26.md  index.md  log.md  picals-crawler-net-层-ssot-实现记录-2026-06-22.md  picals-crawler-ugoira-gif-下载调研报告-2026-06-24.md  picals-crawler-ugoira-gif-实现记录-2026-06-24.md  picals-crawler-ux-优化执行记录-2026-06-21.md  picals-crawler-下载预览与-ranking-调研报告-2026-06-21.md  picals-crawler-下载预览与-ranking-调研附录-实验与竞品.md  picals-crawler-产品设计文档.md  picals-crawler-产品设计附录-交互与路线图.md  picals-crawler-技术设计文档.md  picals-crawler-技术设计附录-实现细节.md  picals-crawler-测试指南.md  picals-crawler-测试架构升级实现记录-2026-06-23.md  picals-crawler-返工收尾实现记录-2026-06-25.md  picals-crawler-项目理解基线.md  typescript-原项目实现观察.md
src/: config.rs  error.rs  failure.rs  lib.rs  main.rs  organize.rs  output.rs  replay.rs  test_support.rs
src/auth/: credential.rs  mod.rs
src/cli/: config.rs  download.rs  mod.rs  organize.rs
src/collector/: mod.rs  selector.rs
src/commands/: config_cmd.rs  download_bookmark.rs  download_common.rs  download_direct.rs  download_illust.rs  download_keyword.rs  download_ranking.rs  download_user.rs  mod.rs  organize.rs  prompt_support.rs  retry_cmd.rs  setup.rs  update.rs
src/commands/config_cmd/: clean.rs  field.rs  mod.rs  prompt.rs  render.rs  set.rs  shared.rs  show.rs
src/commands/setup/: auth_flow.rs  mod.rs  post_setup.rs  prompting.rs
src/crawler/: bookmark.rs  illust.rs  keyword.rs  mod.rs  ranking.rs  shared.rs  user.rs
src/downloader/: image.rs  mod.rs  ugoira.rs
src/net/: catalog.rs  client.rs  event.rs  mod.rs  policy.rs  session.rs  state.rs  test_hook.rs  transfer.rs
src/pixiv/: mod.rs  selector.rs  url.rs
src/utils/: mod.rs  progress.rs  retry.rs  url.rs
tests/: app.rs  cli.rs  command_test.rs  contracts.rs  crawler_test.rs  live.rs  selector_test.rs
tests/app/: command_dispatch.rs  crawler.rs  ugoira.rs
tests/cli/: config.rs  download_user.rs  help.rs  organize.rs  parse.rs  retry.rs  ugoira.rs  verbose.rs
tests/contracts/: manifest.rs  selector.rs  ugoira.rs
tests/fixtures/: bookmark.json  homepage_logged_in.html  illust_detail.json  illust_pages.json  keyword_search.json  ranking.json  ugoira_detail.json  ugoira_meta.json  user_profile_all.json
tests/integration/: crawler_test.rs  selector_test.rs
tests/support/: cli.rs  config.rs  env.rs  fixtures.rs  mock_pixiv.rs  mod.rs
