[package]
name = "hana-pixiv-downloader"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "开箱即用的 Pixiv 图片下载 CLI 工具"
authors = ["nonhana"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/picals-dev/hana-pixiv-downloader"
homepage = "https://github.com/picals-dev/hana-pixiv-downloader"
documentation = "https://docs.rs/hana-pixiv-downloader"
keywords = ["pixiv", "cli", "downloader", "ugoira", "images"]
categories = ["command-line-utilities"]
include = [
    "/src/**",
    "/tests/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
]
default-run = "hpd"
autobins = false

[[bin]]
name = "hpd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "socks", "cookies", "rustls-tls", "charset", "json", "stream"] }
clap = { version = "4", features = ["derive", "wrap_help"] }
inquire = "0.7"
indicatif = "0.17"
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
eyre = "0.6"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
jiff = "0.1"
regex = "1"
dirs-next = "2"
url = "2"
futures = "0.3"
gif = "0.14"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"
